samples/_failures_safe/1761634016_7a9ae2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe7b0381.c: In function ‘main’:
./samples/SAFE/__tmp_fe7b0381.c:158:9: error: expected declaration or statement at end of input
  158 |         if (choice == 1) {
      |         ^~
./samples/SAFE/__tmp_fe7b0381.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fe7b0381.c:158:9: error: expected declaration or statement at end of input
